Fix warnings and improve logging